# judgeval-copy

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  Pipfile  README Fork Updates.md  README.md  Readme Fork Updates  framework.py  main.py  pyproject.toml  pytest.ini  testing_classifier_scorers.py  update_version.py
.github/: pull_request_template.md
.github/workflows/: blocked-pr.yaml  ci-staging.yaml  ci.yaml  lint.yaml  merge-branch-check.yaml  merge-to-main.yaml  release.yaml  validate-branch.yaml
agents/: yash_agent.py
docs/: create_scorer.ipynb  demo.ipynb  getting_started.mdx  introduction.mdx  judgment_client_test.py  mint.json  prompt_scorer.ipynb  quickstart.ipynb  quickstart.mdx
docs/alerts/: notifications.mdx  platform_notifications.mdx  rules.mdx
docs/api_reference/: judgment_client.mdx  trace.mdx
docs/changelog/: 2025-04-21.mdx
docs/clustering/: clustering.mdx
docs/compliance/: certifications.mdx
docs/dev_docs/: getting_started.mdx  introduction.mdx
docs/evaluation/: data_datasets.mdx  data_examples.mdx  data_sequences.mdx  experiment_comparisons.mdx  introduction.mdx  judges.mdx  unit_testing.mdx
docs/integration/: braintrust.mdx  langgraph.mdx  litellm_integration.mdx  tracing_integrations.mdx
docs/judgment/: introduction.mdx
docs/judgment_cli/: installation.mdx  self-hosting.mdx
docs/mcp_server/: mcp_server.mdx
docs/monitoring/: annotations.mdx  introduction.mdx  tracing.mdx  tracing_s3.mdx
docs/notebooks/: create_dataset.ipynb  create_scorer.ipynb  demo.ipynb  prompt_scorer.ipynb  quickstart.ipynb
docs/optimization/: osiris_agent.mdx
docs/self_hosting/: get_started.mdx
docs/synthetic_data/: synthetic_data.mdx
e2etests/: judgment_client_test.py  test_all_scorers.py  test_prompt_scoring.py  test_tracer.py
evals/: multi_step_eval.yaml  yash_eval.yaml
examples/: README.md  code_style_scorer.py  cold_email_scorer.py
judgeval/: __init__.py  constants.py  core_classes.py  evaluation_run.py  exceptions.py  judgment_client.py  judgment_client_test.py  litellm_model_names.py  playground.py  run_evaluation.py
judgeval/common/: __init__.py  exceptions.py  logger.py  telemetry.py  tracer.py  utils.py
judgeval/data/: __init__.py  api_example.py  example.py  metric_data.py  result.py  scorer_data.py
judgeval/judges/: __init__.py  base_judge.py  litellm_judge.py  mixture_of_judges.py  together_judge.py  utils.py
judgeval/scorers/: __init__.py  api_scorer.py  base_scorer.py  custom_scorer.py  judgeval_scorer.py  prompt_scorer.py  score.py  utils.py
judgeval_docs/: quickstart.ipynb
judgeval_docs/demo_files/: tanaka.txt  tanaka_beneficiary.txt  tanaka_recommender.txt
src/: .coveragerc  failure_analysis_results.txt
src/demo/: async_evaluation_example.py  async_example.py  dataset.py  demo.py  errors.py  eval_test.py  fibonacci_demo.py  involved_tool.py  langgraph_demo.py  sequence_test.py  simple_trace.py  simple_trace_deep.py  streaming_anthropic_demo.py  streaming_openai_demo.py  test.py  travel_agent.py
src/e2etests/: conftest.py  judgment_client_test.py  playground.py  test.py  test_all_scorers.py  test_async_execution.py  test_custom_judges.py  test_dataset_operations.py  test_datasets.py  test_eval_operations.py  test_judgee_traces_update.py  test_judgee_update.py  test_judges.py  test_langgraph.py  test_prompt_scoring.py  test_requests_backoff.py  test_rules_alerts.py  test_s3_trace_saving.py  test_trace_operations.py  test_tracer.py  utils.py
src/judgeval/: __init__.py  clients.py  constants.py  evaluation_run.py  judgment_client.py  rules.py  run_evaluation.py  run_from_config.py  version_check.py
src/tests/: conftest.py  test_async_execution.py  test_rules_skip.py  test_rules_with_api_scorers.py  test_tracer_deep_tracing.py
src/yash_tests/: run_length_penalty_test.py
tests/: judgment_client_test.py  test_prompt_scoring.py  test_tracer.py
tests/common/: test_exceptions.py  test_logger.py  test_telemetry.py  test_tracer.py  test_utils.py
tests/data/: test_example.py  test_scorer_data.py
tests/dev/: test_pytest.py
tests/judges/: test_judge_utils.py  test_litellm_judge.py  test_mixture_of_judges.py  test_together_judge.py
tests/notification/: test_notification_serialization.py
tests/scorers/: test_base_scorer.py  test_custom_scorer.py  test_judgeval_scorer.py  test_prompt_scorer.py  test_score.py  test_scorer_utils.py
(+336 files in other folders)
