[project]
name = "judgeval"
version = "0.0.21"
authors = [
    { name="Andrew Li", email="andrew@judgmentlabs.ai" },
    { name="Alex Shan", email="alex@judgmentlabs.ai" },
    { name="Joseph Camyre", email="joseph@judgmentlabs.ai" },
]
description = "Judgeval Package"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICENSE.md"]
dependencies = [
    "litellm",
    "python-dotenv==1.0.1",
    "fastapi",
    "uvicorn",
    "supabase",
    "requests",
    "pandas",
    "openai",
    "together",
    "anthropic",
    "nest-asyncio",
    "pika",
    "openpyxl",
    "langchain",
    "langchain-huggingface",
    "langchain-openai",
    "langchain-anthropic",
    "langchain-core",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.14.0",
    "tavily-python"
]

[project.urls]
Homepage = "https://github.com/JudgmentLabs/judgeval"
Issues = "https://github.com/JudgmentLabs/judgeval/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/judgeval"]
include = [
    "/src/judgeval",
    "/src/judgeval/**/*.py",
]

[tool.hatch.build]
directory = "dist"
artifacts = [
    "src/judgeval/**/*.py",
]
exclude = [
    "src/e2etests/*",
    "src/tests/*",
]
