[project]
name = "judgeval"
version = "<version_placeholder>"
authors = [
    { name="Andrew Li", email="andrew@judgmentlabs.ai" },
    { name="Alex Shan", email="alex@judgmentlabs.ai" },
    { name="Joseph Camyre", email="joseph@judgmentlabs.ai" },
]
description = "Judgeval Package"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICENSE.md"]
dependencies = [
    "litellm==1.61.15",
    "python-dotenv==1.0.1",
    "requests",
    "pandas",
    "openai",
    "together",
    "anthropic",
    "nest-asyncio",
    "langchain-huggingface",
    "langchain-openai",
    "langchain-anthropic",
    "langchain-core",
    "google-genai",
    "boto3"
]

[project.urls]
Homepage = "https://github.com/JudgmentLabs/judgeval"
Issues = "https://github.com/JudgmentLabs/judgeval/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/judgeval"]
include = [
    "/src/judgeval",
    "/src/judgeval/**/*.py",
]

[tool.hatch.build]
directory = "dist"
artifacts = [
    "src/judgeval/**/*.py",
]
exclude = [
    "src/e2etests/*",
    "src/tests/*",
    "src/demo/*"
]
